--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@react-pdf/renderer": "^3.1.17",
     "@react-three/drei": "^9.88.13",
     "@react-three/fiber": "^8.15.10",
     "framer-motion": "^10.16.4",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.173",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^6.18.0",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.158.0"
