--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.173",
     "react-pdf": "^7.7.0",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.18.0",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.158.0"
